--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "currency-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
@@ -10,6 +11,10 @@
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "4.18.2",
+    "mongoose": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.16.0",
@@ -20,9 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-server": "nodemon server/index.js"
   },
-
   "browserslist": {
     "production": [
       ">0.2%",
