--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "axios": "^1.6.2",
+    "bcrypt": "5.1.1",
+    "cors": "2.8.5",
+    "dotenv": "16.3.1",
     "express": "4.18.2",
-    "mongoose": "^8.0.1",
+    "mongoose": "8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.16.0",
@@ -26,7 +28,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-server": "nodemon server/index.js"
+    "start-server-nodemon": "nodemon server/index.js",
+    "start-server-node": "node server/index.js"
   },
   "browserslist": {
     "production": [
