--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "express": "4.18.2",
+    "lodash": "^4.17.21",
     "mongoose": "8.0.1",
+    "pm2": "^5.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.16.0",
