--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,3 @@
 PORT = 9000
 MONGODB_URL = mongodb://127.0.0.1:27017/exchange-server
+CURRENCYAPI = cur_live_ev8VYptqU7s5dbmD5iRl32Y36cMyEt3F6xK6dxot
