--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "lodash": "^4.17.21",
+    "mongodb": "^6.3.0",
     "mongoose": "8.0.1",
     "pm2": "5.3.0",
     "react": "18.2.0",
